kubernetes/infrastructure/axonhub/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: axonhub
  namespace: axonhub
spec:
  type: ClusterIP
  ports:
    - port: 8090
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: axonhub
